--- a/manara/manara3.html
+++ b/manara/manara3.html
@@ -176,18 +176,168 @@
     background-color: #f9f9f9;
   }
 }
+#menuToggle
+{
+  display: block;
+  /* You can also use relative/absolute here if you want to stay on the top */
+  position: fixed;
+  top: 50px;
+  left: 50px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
 
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+  
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: tomato;
+}
+
+
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  max-width: 400px;
+  width: 100vw;
+  max-height: 100vh;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  box-sizing: border-box;
+  overflow-y: auto;
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+#menu li label
+{
+  cursor: pointer;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
   </style>
 </head>
 
 <body>
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky" 
-  style="position: fixed;
+  style="position: fixed; text-align: center;
   top: 0;
   left: 0;
-  width: 100%; /* Make the header span the full width */
-  padding: 1em 2%; /* Use relative padding */
+  width: 100%; 
+
+  padding: 1em 2%; 
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
   z-index: 1000;">    
       <div class="container">
@@ -198,11 +348,44 @@
         </a>
 
         <!-- ***** Menu Trigger for Mobile ***** -->
-        <div class="menu-trigger" onclick="toggleMenu(this)">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+        <nav role="navigation">
+          <div id="menuToggle">
+            <input type="checkbox" id="menuCheckbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+
+              <li><a href="../cv/cv1.html">التخصص</a></li>
+                <li><a href="../cv/cv2.html">المؤهلات الدراسية</a></li>
+                <li><a href="../cv/cv3.html">التدرج الوظيفي</a></li>
+                <li><a href="../cv/cv4.html">التدرج الاداري</a></li>
+                <li><a href="../cv/cv5.html">الخبرات</a></li>
+                <li><a href="../cv/cv6.html">مشروعات مستقبلية</a></li>
+                <li><a href="../cv/cv7.html">وسائل التواصل</a></li>
+                <li><a href="../cv/cv8.html">تحميل سيرة ذاتية مفصلة</a></li>
+                <li><a href="../cv/cv9.html">تحميل سيرة ذاتية مختصرة</a></li>
+
+              <li><a href="../lib/lib1.html">قواعد البيانات</a></li>
+                <li><a href="../lib/lib2.html">الابحاث العلمية </a></li>
+                <li><a href="../lib/lib3.html">الكل</a></li>
+                <li><a href="../lib/lib4.html">خدمات ومنصات تعليمية</a></li>
+
+              <li><a href="../manara/manara1.html">الندوات والورش التدريبية</a></li>
+                <li><a href="../manara/manara2.html">المحاضرات العلمية</a></li>
+                <li><a href="../manara/manara3.html">مقالات</a></li>
+
+              <li><a href="../media/media1.html">احدث الابحاث</a></li>
+                <li><a href="../media/media2.html">احدث الندوات</a></li>
+                <li><a href="../media/media3.html">احدث المحاضرات</a></li>
+                <li><a href="../media/media4.html">نشرة الابحاث</a></li>
+                <li><a href="../media/media5.html">المكتبة العامة</a></li>
+                </li>
+
+
+            </ul>
+          </div>
+        </nav>
 
         <!-- ***** Menu Start ***** -->
 <!-- ***** Menu Start ***** -->
@@ -256,7 +439,6 @@
       </div>
     </div>
   </header>
-  	
   	
   				
 </body>
