--- a/media/media0.html
+++ b/media/media0.html
@@ -21,7 +21,6 @@
 
   <!-- Custom CSS for Responsiveness -->
   <style>
-
 .header-area {
   position: fixed;
   top: 0;
@@ -177,9 +176,295 @@
     background-color: #f9f9f9;
   }
 }
+#menuToggle
+{
+  display: block;
+  /* You can also use relative/absolute here if you want to stay on the top */
+  position: fixed;
+  top: 50px;
+  left: 50px;
+  
+  z-index: 1;
+  
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+#menuToggle a
+{
+  text-decoration: none;
+  color: #232323;
+  
+  transition: color 0.3s ease;
+}
+
+#menuToggle a:hover
+{
+  color: tomato;
+}
 
 
-main {
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; /* hide this */
+  z-index: 2; /* and place it over the hamburger */
+  
+  -webkit-touch-callout: none;
+}
+
+/*
+ * Just a quick hamburger
+ */
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+/* 
+ * Transform all the slices of hamburger
+ * into a crossmark.
+ */
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+/*
+ * But let's hide the middle one.
+ */
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+/*
+ * Ohyeah and the last one should go the other direction
+ */
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+/*
+ * Make this absolute positioned
+ * at the top left of the screen
+ */
+#menu
+{
+  position: absolute;
+  max-width: 400px;
+  width: 100vw;
+  max-height: 100vh;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  box-sizing: border-box;
+  overflow-y: auto;
+  background: #ededed;
+  list-style-type: none;
+  -webkit-font-smoothing: antialiased;
+  /* to stop flickering of text in safari */
+  
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+#menu li label
+{
+  cursor: pointer;
+}
+
+/*
+ * And let's slide it in from the left
+ */
+#menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+  </style>
+</head>
+
+<body>
+  <!-- ***** Header Area Start ***** -->
+  <header class="header-area header-sticky" 
+  style="position: fixed; text-align: center;
+  top: 0;
+  left: 0;
+  width: 100%; 
+
+  padding: 1em 2%; 
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+  z-index: 1000;">    
+      <div class="container">
+      <div class="main-nav">
+        <!-- ***** Logo Start ***** -->
+        <a href="../main/index.html" class="logo">
+          <img src="../images/profhaithm-zinhom-high-resolution-logo-grayscale-transparent.png" alt="Logo">
+        </a>
+
+        <!-- ***** Menu Trigger for Mobile ***** -->
+        <nav role="navigation">
+          <div id="menuToggle">
+            <input type="checkbox" id="menuCheckbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+
+              <li><a href="../cv/cv1.html">التخصص</a></li>
+                <li><a href="../cv/cv2.html">المؤهلات الدراسية</a></li>
+                <li><a href="../cv/cv3.html">التدرج الوظيفي</a></li>
+                <li><a href="../cv/cv4.html">التدرج الاداري</a></li>
+                <li><a href="../cv/cv5.html">الخبرات</a></li>
+                <li><a href="../cv/cv6.html">مشروعات مستقبلية</a></li>
+                <li><a href="../cv/cv7.html">وسائل التواصل</a></li>
+                <li><a href="../cv/cv8.html">تحميل سيرة ذاتية مفصلة</a></li>
+                <li><a href="../cv/cv9.html">تحميل سيرة ذاتية مختصرة</a></li>
+
+              <li><a href="../lib/lib1.html">قواعد البيانات</a></li>
+                <li><a href="../lib/lib2.html">الابحاث العلمية </a></li>
+                <li><a href="../lib/lib3.html">الكل</a></li>
+                <li><a href="../lib/lib4.html">خدمات ومنصات تعليمية</a></li>
+
+              <li><a href="../manara/manara1.html">الندوات والورش التدريبية</a></li>
+                <li><a href="../manara/manara2.html">المحاضرات العلمية</a></li>
+                <li><a href="../manara/manara3.html">مقالات</a></li>
+
+              <li><a href="../media/media1.html">احدث الابحاث</a></li>
+                <li><a href="../media/media2.html">احدث الندوات</a></li>
+                <li><a href="../media/media3.html">احدث المحاضرات</a></li>
+                <li><a href="../media/media4.html">نشرة الابحاث</a></li>
+                <li><a href="../media/media5.html">المكتبة العامة</a></li>
+                </li>
+
+
+            </ul>
+          </div>
+        </nav>
+
+        <!-- ***** Menu Start ***** -->
+<!-- ***** Menu Start ***** -->
+<div class="col-lg-10">
+    <ul class="nav">
+       
+        <li class="scroll-to-section"><a href="../call/call.html" class="active">اتصل بنا</a></li>
+        <li class="submenu">
+            <a href="javascript:void(0);" class="submenu-link">الاعلام</a>
+            <ul class="submenu-items">                <li><a href="../media/media0.html">ارشيف الاخبار</a></li>
+                <li><a href="../media/media1.html">احدث الابحاث</a></li>
+                <li><a href="../media/media2.html">احدث الندوات</a></li>
+                <li><a href="../media/media3.html">احدث المحاضرات</a></li>
+                <li><a href="../media/media4.html">نشرة الابحاث</a></li>
+                <li><a href="../media/media5.html">المكتبة العامة</a></li>
+            </ul>
+        </li>
+        <li class="submenu">
+            <a href="javascript:void(0);" class="submenu-link">المنارة</a>
+            <ul class="submenu-items">                <li><a href="../manara/manara0.html">فيديوهات</a></li>
+                <li><a href="../manara/manara1.html">الندوات والورش التدريبية</a></li>
+                <li><a href="../manara/manara2.html">المحاضرات العلمية</a></li>
+                <li><a href="../manara/manara3.html">مقالات</a></li>
+            </ul>
+        </li>
+        <li class="submenu">
+            <a href="javascript:void(0);" class="submenu-link">مكتبة ابن الهيثم</a>
+            <ul class="submenu-items">                <li><a href="../lib/lib0.html">الكتب والمصنفات</a></li>
+                <li><a href="../lib/lib1.html">قواعد البيانات</a></li>
+                <li><a href="../lib/lib2.html">الابحاث العلمية </a></li>
+                <li><a href="../lib/lib3.html">الكل</a></li>
+                <li><a href="../lib/lib4.html">خدمات ومنصات تعليمية</a></li>
+            </ul>
+        </li>
+        <li class="submenu">
+            <a href="javascript:void(0);" class="submenu-link">السيرة الذاتية</a>
+            <ul class="submenu-items">
+                                <li><a href="../cv/cv0.html">البيانات الشخصية</a></li>
+                <li><a href="../cv/cv1.html">التخصص</a></li>
+                <li><a href="../cv/cv2.html">المؤهلات الدراسية</a></li>
+                <li><a href="../cv/cv3.html">التدرج الوظيفي</a></li>
+                <li><a href="../cv/cv4.html">التدرج الاداري</a></li>
+                <li><a href="../cv/cv5.html">الخبرات</a></li>
+                <li><a href="../cv/cv6.html">مشروعات مستقبلية</a></li>
+                <li><a href="../cv/cv7.html">وسائل التواصل</a></li>
+                <li><a href="../cv/cv8.html">تحميل سيرة ذاتية مفصلة</a></li>
+                <li><a href="../cv/cv9.html">تحميل سيرة ذاتية مختصرة</a></li>
+            </ul>
+        </li>
+    </ul>  
+      </div>
+    </div>
+  </header>
+  <br><br>  <br><br>  <br><br><br><br>  <br><br>
+  <main>
+    <section style="      font-family: 'Scheherazade New', serif;
+    direction: rtl;
+    text-align: right;">
+      <h1 style="color: #252525; text-align: center;">"ارشيف الاخبار"</h1>
+      <br><br><br>
+      <!-- <div class="h1-divider"></div> -->
+      <p class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi debitis eaque explicabo fuga maiores necessitatibus, neque omnis optio vel!</p>
+  
+      <article>
+        <h3>title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi debitis eaque explicabo fuga maiores necessitatibus, neque omnis optio vel!</p>
+  
+        <div class="placeHolder_img"></div>
+  
+        <h3>title 2</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi debitis eaque explicabo fuga maiores necessitatibus, neque omnis optio vel!</p>
+      </article>
+    </section>
+  </main>
+</body>
+
+
+<style>
+  main {
 	position: relative;
 	left: 50%;
 	transform: translate(-50%, 0);
@@ -371,105 +656,4 @@ section p {
 }
 
   </style>
-</head>
-
-<body>
-  <!-- ***** Header Area Start ***** -->
-  <header class="header-area header-sticky" 
-  style="position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%; /* Make the header span the full width */
-  padding: 1em 2%; /* Use relative padding */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
-  z-index: 1000;">    
-      <div class="container">
-      <div class="main-nav">
-        <!-- ***** Logo Start ***** -->
-        <a href="../main/index.html" class="logo">
-          <img src="../images/profhaithm-zinhom-high-resolution-logo-grayscale-transparent.png" alt="Logo">
-        </a>
-
-        <!-- ***** Menu Trigger for Mobile ***** -->
-        <div class="menu-trigger" onclick="toggleMenu(this)">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-
-        <!-- ***** Menu Start ***** -->
-<!-- ***** Menu Start ***** -->
-<div class="col-lg-10">
-    <ul class="nav">
-       
-        <li class="scroll-to-section"><a href="../call/call.html" class="active">اتصل بنا</a></li>
-        <li class="submenu">
-            <a href="javascript:void(0);" class="submenu-link">الاعلام</a>
-            <ul class="submenu-items">                <li><a href="../media/media0.html">ارشيف الاخبار</a></li>
-                <li><a href="../media/media1.html">احدث الابحاث</a></li>
-                <li><a href="../media/media2.html">احدث الندوات</a></li>
-                <li><a href="../media/media3.html">احدث المحاضرات</a></li>
-                <li><a href="../media/media4.html">نشرة الابحاث</a></li>
-                <li><a href="../media/media5.html">المكتبة العامة</a></li>
-            </ul>
-        </li>
-        <li class="submenu">
-            <a href="javascript:void(0);" class="submenu-link">المنارة</a>
-            <ul class="submenu-items">                <li><a href="../manara/manara0.html">فيديوهات</a></li>
-                <li><a href="../manara/manara1.html">الندوات والورش التدريبية</a></li>
-                <li><a href="../manara/manara2.html">المحاضرات العلمية</a></li>
-                <li><a href="../manara/manara3.html">مقالات</a></li>
-            </ul>
-        </li>
-        <li class="submenu">
-            <a href="javascript:void(0);" class="submenu-link">مكتبة ابن الهيثم</a>
-            <ul class="submenu-items">                <li><a href="../lib/lib0.html">الكتب والمصنفات</a></li>
-                <li><a href="../lib/lib1.html">قواعد البيانات</a></li>
-                <li><a href="../lib/lib2.html">الابحاث العلمية </a></li>
-                <li><a href="../lib/lib3.html">الكل</a></li>
-                <li><a href="../lib/lib4.html">خدمات ومنصات تعليمية</a></li>
-            </ul>
-        </li>
-        <li class="submenu">
-            <a href="javascript:void(0);" class="submenu-link">السيرة الذاتية</a>
-            <ul class="submenu-items">
-                                <li><a href="../cv/cv0.html">البيانات الشخصية</a></li>
-                <li><a href="../cv/cv1.html">التخصص</a></li>
-                <li><a href="../cv/cv2.html">المؤهلات الدراسية</a></li>
-                <li><a href="../cv/cv3.html">التدرج الوظيفي</a></li>
-                <li><a href="../cv/cv4.html">التدرج الاداري</a></li>
-                <li><a href="../cv/cv5.html">الخبرات</a></li>
-                <li><a href="../cv/cv6.html">مشروعات مستقبلية</a></li>
-                <li><a href="../cv/cv7.html">وسائل التواصل</a></li>
-                <li><a href="../cv/cv8.html">تحميل سيرة ذاتية مفصلة</a></li>
-                <li><a href="../cv/cv9.html">تحميل سيرة ذاتية مختصرة</a></li>
-            </ul>
-        </li>
-    </ul>  
-      </div>
-    </div>
-  </header>
-  <br><br>  <br><br>  <br><br><br><br>  <br><br>
-  <main>
-    <section style="      font-family: 'Scheherazade New', serif;
-    direction: rtl;
-    text-align: right;">
-      <h1 style="color: #252525; text-align: center;">"ارشيف الاخبار"</h1>
-      <br><br><br>
-      <!-- <div class="h1-divider"></div> -->
-      <p class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi debitis eaque explicabo fuga maiores necessitatibus, neque omnis optio vel!</p>
-  
-      <article>
-        <h3>title</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi debitis eaque explicabo fuga maiores necessitatibus, neque omnis optio vel!</p>
-  
-        <div class="placeHolder_img"></div>
-  
-        <h3>title 2</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque commodi debitis eaque explicabo fuga maiores necessitatibus, neque omnis optio vel!</p>
-      </article>
-    </section>
-  </main>
-</body>
-
 </html>
